--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,11 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# service worker
+sw.js 
+sw.js.map
+workbox-.js 
+worker-.js 
+workbox-.js.map
+worker-.js.map
