--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -17,7 +17,8 @@
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "next-localization": "latest"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -32,12 +33,15 @@
     "prettier-plugin-tailwindcss": "^0.5.5",
     "tailwindcss": "^3.4.17",
     "tailwindcss-safe-area": "^0.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "babel-plugin-macros": "^2.8.0",
+    "json?.macro": "^1.3.0"
   },
   "prettier": {
     "semi": false,
     "singleQuote": true,
     "jsxSingleQuote": true,
     "useTabs": true
-  }
+  },
+  "type": "module"
 }
