--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "tailwindcss-safe-area": "^0.4.1",
     "typescript": "^5",
     "babel-plugin-macros": "^2.8.0",
-    "json?.macro": "^1.3.0"
+    "json.macro": "^1.3.0"
   },
   "prettier": {
     "semi": false,
