--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"prepare": "husky install"
+		"format": "prettier --write .",
+		"prepare": "husky install",
+		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"dependencies": {
 		"@tailwindcss/aspect-ratio": "^0.4.2",
@@ -15,29 +17,31 @@
 		"@tailwindcss/line-clamp": "^0.4.4",
 		"@tailwindcss/typography": "^0.5.16",
 		"next": "15.1.6",
+		"next-localization": "latest",
 		"next-pwa": "^5.6.0",
 		"next-themes": "^0.4.4",
 		"react": "^19.0.0",
-		"react-dom": "^19.0.0",
-		"next-localization": "latest"
+		"react-dom": "^19.0.0"
 	},
 	"devDependencies": {
+		"@commitlint/cli": "^19.6.1",
+		"@commitlint/config-conventional": "^19.6.0",
 		"@eslint/eslintrc": "^3",
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"autoprefixer": "^10.4.20",
+		"babel-plugin-macros": "^2.8.0",
 		"eslint": "^9",
 		"eslint-config-next": "15.1.6",
+		"husky": "^8.0.0",
+		"json.macro": "^1.3.0",
 		"postcss": "^8",
 		"prettier": "^3.0.3",
 		"prettier-plugin-tailwindcss": "^0.5.5",
 		"tailwindcss": "^3.4.17",
 		"tailwindcss-safe-area": "^0.4.1",
-		"typescript": "^5",
-		"babel-plugin-macros": "^2.8.0",
-		"json.macro": "^1.3.0",
-		"husky": "^8.0.0"
+		"typescript": "^5"
 	},
 	"prettier": {
 		"semi": false,
