feat: functional and useful initial commit for nextjs template using PWA, tailwindcss, and i18n

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,17 +19,9 @@
 			}
 		],
 		"paths": {
-			"@/*": ["./src/*"],
-			"@/config/*": ["./src/config/*"]
+			"@/*": ["./src/*"]
 		}
 	},
-	"include": [
-		"next-env.d.ts",
-		"**/*.ts",
-		"**/*.tsx",
-		".next/types/**/*.ts",
-		"src/config/*.js",
-		"next-i18next.config.js"
-	],
+	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
 	"exclude": ["node_modules"]
 }
