--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
 		"test": "echo \"Currently a testless system...whoops!\""
 	},
 	"dependencies": {
-		"@tailwindcss/aspect-ratio": "^0.4.2",
-		"@tailwindcss/forms": "^0.5.10",
-		"@tailwindcss/line-clamp": "^0.4.4",
-		"@tailwindcss/typography": "^0.5.16",
+		"@capacitor/cli": "^7.0.1",
+		"@capacitor/core": "^7.0.1",
+		"framer-motion": "^12.4.3",
 		"next": "15.1.6",
 		"next-localization": "latest",
 		"next-pwa": "^5.6.0",
@@ -27,6 +26,7 @@
 		"@commitlint/cli": "^19.6.1",
 		"@commitlint/config-conventional": "^19.6.0",
 		"@eslint/eslintrc": "^3",
+		"@heroicons/react": "^2.2.0",
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
@@ -36,11 +36,9 @@
 		"eslint-config-next": "15.1.6",
 		"husky": "^8.0.0",
 		"json.macro": "^1.3.0",
-		"postcss": "^8",
+		"postcss": "^8.5.2",
 		"prettier": "^3.0.3",
-		"prettier-plugin-tailwindcss": "^0.5.5",
 		"tailwindcss": "^3.4.17",
-		"tailwindcss-safe-area": "^0.4.1",
 		"typescript": "^5"
 	},
 	"prettier": {
