--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
+		"prebuild": "node ./scripts/generate-locale-map.js",
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
