--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
 		"lint": "next lint",
 		"format": "prettier --write .",
 		"prepare": "husky install",
-		"test": "echo \"Currently a testless system...whoops!\""
+		"test": "jest",
+		"test:watch": "jest --watch",
+		"test:coverage": "jest --coverage"
 	},
 	"dependencies": {
 		"@capacitor/cli": "^7.0.1",
@@ -24,22 +26,33 @@
 		"react-dom": "^19.0.0"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.26.9",
+		"@babel/preset-typescript": "^7.26.0",
 		"@commitlint/cli": "^19.6.1",
 		"@commitlint/config-conventional": "^19.6.0",
 		"@eslint/eslintrc": "^3",
 		"@heroicons/react": "^2.2.0",
+		"@testing-library/jest-dom": "^6.6.3",
+		"@testing-library/react": "^16.2.0",
+		"@testing-library/user-event": "^14.6.1",
+		"@types/jest": "^29.5.14",
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"autoprefixer": "^10.4.20",
+		"babel-jest": "^29.7.0",
 		"babel-plugin-macros": "^2.8.0",
 		"eslint": "^9",
 		"eslint-config-next": "15.1.6",
 		"husky": "^8.0.0",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
 		"json.macro": "^1.3.0",
 		"postcss": "^8.5.2",
 		"prettier": "^3.0.3",
 		"tailwindcss": "^3.4.17",
+		"ts-jest": "^29.2.6",
+		"ts-node": "^10.9.2",
 		"typescript": "^5"
 	},
 	"prettier": {
