--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,16 @@
 		],
 		"paths": {
 			"@/*": ["./src/*"]
-		}
+		},
+		"types": ["jest", "node", "@testing-library/jest-dom"]
 	},
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+	"include": [
+		"next-env.d.ts",
+		"**/*.ts",
+		"**/*.tsx",
+		"**/*.js",
+		"**/*.jsx",
+		"**/__tests__/**/*" // Add this to include test files
+	],
 	"exclude": ["node_modules"]
 }
